--- a/app/src/main/res/layout/fragment_game_mode.xml
+++ b/app/src/main/res/layout/fragment_game_mode.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<info.overrideandroid.connect4.view.GameModesView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -194,4 +194,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</info.overrideandroid.connect4.view.GameModesView>
